--- a/css.css
+++ b/css.css
@@ -58,12 +58,22 @@ header a{
 }
 
 #cardapio div{
-	min-height: 100px;
-	min-width: 100px;
+	min-width: 180px;
+	min-width: 180px;
 	margin: 1em;
 	padding: 1em;
 	background-color: var(--preto);
 	color: var(--branco);
+}
+#cardapio div h1{
+	text-align: center;
+}
+#cardapio div ul{
+	list-style-type: none;
+	padding: 0;
+}
+#cardapio div span{
+	float: right;
 }
 
 #map_section{
@@ -110,4 +120,7 @@ header a{
 }
 #detalhes > div h1{
 	text-align: center;
+}
+#detalhes > div p span{
+	margin-left: 1em;
 }
