--- a/css.css
+++ b/css.css
@@ -1,5 +1,5 @@
 *{
-	font-size: max(calc(100vw / 1400 * 20), 20px);
+	font-size: 20px;
 }
 :root{
 	--branco: #ffffee;
@@ -17,6 +17,10 @@ body {
 	font-family: sans-serif;
 	background-color: var(--cor_principal);
 	color: var(--preto);
+}
+section:not(:first-of-type) {
+	border-top: .3em dashed var(--preto);
+	padding-block: 1em;
 }
 a{
 	color: var(--branco);
@@ -52,30 +56,51 @@ header a{
 	margin: 0 1em;
 }
 #quiosque{
-	padding: 1em;
+	max-width: 100ch;
+	width: calc(100% - 2em);
+	margin: 1em auto;
+	padding-bottom: 1px;
+	background-color: var(--iluminado);
+	color: var(--branco);
+	border-radius: 0.5em;
+	box-shadow: 0px 10px 20px -10px var(--sombra);
+}
+#quiosque h1{
+	background-color: var(--preto);
+	padding: .5em 1em;
+	margin: auto;
+	width: fit-content;
+	text-align: center;
+	border-radius: 0em 0em 0.5em 0.5em;
 }
 #quiosque p{
-	max-width: 100ch;
-	margin: .5em auto;
+	margin: 1em;
 }
 #cardapio{
+	position: relative;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: flex-start;
+	color: var(--branco);
 }
 
 #cardapio div{
-	cursor: pointer;
 	position: relative;
 	margin: 1em;
 	padding: 0;
 	background-color: var(--iluminado);
-	color: var(--branco);
 	border-radius: .5em .5em 1em 1em;
 	box-shadow:
 	0px 10px 20px -10px var(--sombra),
 	0px 0px 2px 2px var(--iluminado) inset;
+}
+#cardapio > span{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding-inline: 1em;
+    font-size: initial;
 }
 #cardapio div:hover{
 	box-shadow:
@@ -114,7 +139,7 @@ header a{
 	margin: .5em 0 0;
 	background-color: var(--preto);
 	padding: 0.25em 0.5em .1em 1em;
-	width: max-content;
+	width: calc(50% - 1em);
 	border-radius: 0 .5em .5em 0;
 	font-size: .9em;
 }
@@ -129,39 +154,14 @@ header a{
 	padding: .25em 1em;
 	display: flex;
 	justify-content: space-between;
-	transition: 1s;
-	gap: 0;
-}
-#cardapio.mostrar_preços div li{
-	gap: 2em;
+	gap: 1em;
 }
 #cardapio div li:nth-of-type(even){
 	background-image: linear-gradient(to right, transparent, var(--cor_principal));
 }
 #cardapio div li span:nth-child(1){
-	width: 0;
-	opacity: 0;
-	transition: 1s;
-	overflow: hidden;
-}
-#cardapio.mostrar_preços div li span:nth-child(1){
-	width: 5ch;
-	opacity: 1;
-}
-#cardapio #dinheiro{
-	border-radius: 1em;
-	position: sticky;
-	top: calc(50vh - 1.5em);
-	padding: 1em;
-	background-color: var(--preto);
-	z-index: 1;
-	font-size: .9em;
-	align-self: center;
-	margin: 2em 0;
-	transition: 1s;
-}
-#cardapio.mostrar_preços #dinheiro{
-	font-size: 0;
+	min-width: 5ch;
+	flex: 0;
 }
 #cardapio div div{
 	background: none;
@@ -238,7 +238,8 @@ header a{
 	padding: 1em;
 	margin: 0;
 	margin-left: auto;
-	width: max-content;
+	width: fit-content;
+	text-align: right;
 	border-radius: 0em 0.5em 0em 0.5em;
 }
 #detalhes > div p{
@@ -263,8 +264,5 @@ header a{
 	}
 	#logo, header a{
 		margin: 1em;
-	}
-	#quiosque p{
-		margin: .5em 1em;
 	}
 }
